Continued work on restructure

--- a/examples/01_environment_setup.ipynb
+++ b/examples/01_environment_setup.ipynb
@@ -36,9 +36,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-09 01:51:07.950829: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-01-29 07:13:24.139681: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-01-09 01:51:16.765879: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-01-29 07:13:25.215388: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -71,7 +71,21 @@
    "execution_count": 2,
    "id": "feccc33f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "partially initialized module 'gravyflow' has no attribute 'gf' (most likely due to a circular import)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m     sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mappend(parent_dir)\n\u001b[1;32m      9\u001b[0m \u001b[39m# Import the GravyFlow module and rename it as 'gf' for ease of use in the code.\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgravyflow\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mgf\u001b[39;00m\n",
+      "File \u001b[0;32m~/gravyflow/__init__.py:48\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mnoise\u001b[39;00m \u001b[39mimport\u001b[39;00m NoiseType, NoiseObtainer\n\u001b[1;32m     44\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39minjection\u001b[39;00m \u001b[39mimport\u001b[39;00m (ScalingOrdinality, ScalingTypes, ScalingMethod, ScalingMethod, ReturnVariables, \n\u001b[1;32m     45\u001b[0m                         WaveformGenerator, WaveformParameters, WNBGenerator, cuPhenomDGenerator, \n\u001b[1;32m     46\u001b[0m                         IncoherentGenerator, InjectionGenerator, roll_vector_zero_padding, generate_mask, \n\u001b[1;32m     47\u001b[0m                         is_not_inherited, batch_injection_parameters)\n\u001b[0;32m---> 48\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mdataset\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m     49\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mplotting\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m     50\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mvalidate\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n",
+      "File \u001b[0;32m~/gravyflow/dataset.py:117\u001b[0m\n\u001b[1;32m     90\u001b[0m         max_arival_time_difference_seconds \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mreduce_max(\n\u001b[1;32m     91\u001b[0m             max_arrival_time_differences\n\u001b[1;32m     92\u001b[0m         )\n\u001b[1;32m     94\u001b[0m     \u001b[39mreturn\u001b[39;00m max_arival_time_difference_seconds\n\u001b[1;32m     96\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdata\u001b[39m(    \n\u001b[1;32m     97\u001b[0m         \u001b[39m# Random Seed:\u001b[39;00m\n\u001b[1;32m     98\u001b[0m         seed: \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m     99\u001b[0m         \u001b[39m# Temporal components:\u001b[39;00m\n\u001b[1;32m    100\u001b[0m         sample_rate_hertz: \u001b[39mfloat\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,   \n\u001b[1;32m    101\u001b[0m         onsource_duration_seconds: \u001b[39mfloat\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    102\u001b[0m         offsource_duration_seconds: \u001b[39mfloat\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    103\u001b[0m         crop_duration_seconds: \u001b[39mfloat\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    104\u001b[0m         \u001b[39m# Scale factor:\u001b[39;00m\n\u001b[1;32m    105\u001b[0m         scale_factor : \u001b[39mfloat\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    106\u001b[0m         \u001b[39m# Noise: \u001b[39;00m\n\u001b[1;32m    107\u001b[0m         noise_obtainer : gf\u001b[39m.\u001b[39mNoiseObtainer \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    108\u001b[0m         group : \u001b[39mstr\u001b[39m \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    109\u001b[0m         \u001b[39m# Injections:\u001b[39;00m\n\u001b[1;32m    110\u001b[0m         waveform_generators: List[\n\u001b[1;32m    111\u001b[0m             Union[gf\u001b[39m.\u001b[39mcuPhenomDGenerator, gf\u001b[39m.\u001b[39mWNBGenerator]\n\u001b[1;32m    112\u001b[0m         ] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m, \n\u001b[1;32m    113\u001b[0m         num_examples_per_generation_batch : \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    114\u001b[0m         \u001b[39m# Output configuration:\u001b[39;00m\n\u001b[1;32m    115\u001b[0m         num_examples_per_batch: \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    116\u001b[0m         input_variables : List[\n\u001b[0;32m--> 117\u001b[0m             Union[gf\u001b[39m.\u001b[39;49mgf\u001b[39m.\u001b[39mWaveformParameters, gf\u001b[39m.\u001b[39mReturnVariables]\n\u001b[1;32m    118\u001b[0m         ] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    119\u001b[0m         output_variables : List[\n\u001b[1;32m    120\u001b[0m             Union[gf\u001b[39m.\u001b[39mgf\u001b[39m.\u001b[39mWaveformParameters, gf\u001b[39m.\u001b[39mReturnVariables]\n\u001b[1;32m    121\u001b[0m         ] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    122\u001b[0m         mask_history \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    123\u001b[0m     ):\n\u001b[1;32m    125\u001b[0m     \u001b[39mif\u001b[39;00m seed \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    126\u001b[0m         seed \u001b[39m=\u001b[39m gf\u001b[39m.\u001b[39mDefaults\u001b[39m.\u001b[39mseed\n",
+      "\u001b[0;31mAttributeError\u001b[0m: partially initialized module 'gravyflow' has no attribute 'gf' (most likely due to a circular import)"
+     ]
+    }
+   ],
    "source": [
     "# Get the absolute path of the grandparent directory (two levels up from the current directory)\n",
     "parent_dir = os.path.abspath('../../')\n",
@@ -129,28 +143,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "db7298c7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:TensorFlow version: 2.12.1, CUDA version: 11.8\n",
-      "2024-01-09 01:53:39.806029: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1635] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 2000 MB memory:  -> device: 0, name: Tesla V100-SXM2-16GB, pci bus id: 0000:0a:00.0, compute capability: 7.0\n",
-      "INFO:root:[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CUDA_VISIBLE_DEVICES after environment setup: 2\n",
-      "GPUs visible to TensorFlow after environment setup: [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set up the environment using gf.env() and return a tf.distribute.Strategy object.\n",
     "env = gf.env()\n",
@@ -182,27 +178,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ccbe5cb1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:TensorFlow version: 2.12.1, CUDA version: 11.8\n",
-      "INFO:root:[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CUDA_VISIBLE_DEVICES after environment setup: 2,4. This has changed correctly.\n",
-      "GPUs visible to TensorFlow after environment setup: [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]. This has not changed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Attempt to run gf.env again, this time requesting 2 GPUs, without restarting the kernel.\n",
     "env = gf.env(num_gpus_to_request=2)\n",
