Added dataset and model training example.

--- a/gravyflow/examples/03_injection_generation.ipynb
+++ b/gravyflow/examples/03_injection_generation.ipynb
@@ -20,11 +20,8 @@
    "outputs": [],
    "source": [
     "# Built-in imports\n",
-    "import os\n",
-    "import sys\n",
-    "from typing import Iterator, List, Dict\n",
+    "from typing import List, Dict\n",
     "from pathlib import Path\n",
-    "from itertools import islice\n",
     "\n",
     "# Dependency imports: \n",
     "import numpy as np\n",
