--- a/gravyflow/examples/01_environment_setup.ipynb
+++ b/gravyflow/examples/01_environment_setup.ipynb
@@ -7,9 +7,25 @@
    "source": [
     "# Notebook 1: Setting up the Environment\n",
     "\n",
-    "GravyFlow is a GPU-based module that relies heavily on vectorized GPU functions to accelerate calculations. Many components, primarily cuPhenom, do not have a CPU alternative. While most functions are built on TensorFlow and can operate in a CPU-only mode, they are less efficient in this configuration, diminishing the module's advantages. You are welcome to run GravyFlow in a CPU-only environment, but please note that it has not been rigorously tested.\n",
+    "GravyFlow is a GPU-based module that relies heavily on vectorized GPU functions to accelerate calculations. Many components, primarily cuPhenom, do not have a CPU alternative.\n",
     "\n",
-    "The environment setup can be largely automated by executing the `setup.sh` bash script located in the base directory. Be aware that Gravflow is under active development; as such, you might encounter issues, particularly with automated helper scripts. If you encounter problems with the setup script, ensure that TensorFlow can detect available GPUs in your environment.\n",
+    "GravyFlow can be installed by cloning the git repository with: \n",
+    "\n",
+    "`git clone https://github.com/mrknorman/gravyflow`\n",
+    "\n",
+    "It is recommended that you install GravyFlow within a fresh conda environment. Note that GravyFlow requires Python=3.10*:\n",
+    "\n",
+    "`conda env create --name gravyflow`\n",
+    "\n",
+    "Which can then be activated with:\n",
+    "\n",
+    "`conda activate gravyflow`\n",
+    "\n",
+    "GravyFlow and all its requirments can then be installed into your current Python environment with:\n",
+    "\n",
+    "`pip install -e gravyflow`\n",
+    "\n",
+    "Be aware that Gravflow is under active development; as such, you might encounter issues. If you encounter problems with the installation , ensure that TensorFlow can detect available GPUs in your environment.\n",
     "\n",
     "## Sharing is caring\n",
     "\n",
@@ -36,9 +52,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-29 07:13:24.139681: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-02-28 05:30:56.935187: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-02-28 05:30:56.935226: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-02-28 05:30:56.936459: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-02-28 05:30:56.944520: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-01-29 07:13:25.215388: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-02-28 05:30:58.050492: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -47,9 +66,9 @@
     "# This can be used for file and directory operations, environment variable management, etc.\n",
     "import os\n",
     "\n",
-    "# Importing the sys module, which provides access to some variables used or maintained by the Python interpreter.\n",
-    "# Useful for manipulating the Python runtime environment, such as sys.path for module search paths.\n",
-    "import sys\n",
+    "# Importing List from the typing module. Typehints can be used to illustrate to the reader of the\n",
+    "# code the type of variables, in this case, lists\n",
+    "from typing import List\n",
     "\n",
     "# Importing TensorFlow, a powerful library for machine learning and neural networks.\n",
     "# Renamed as 'tf' for ease of use in the code.\n",
@@ -63,7 +82,7 @@
    "source": [
     "## Import GravyFlow\n",
     "\n",
-    "Next, we will import the GravyFlow module. Currently, GravyFlow is not set up as an installable package. To enable the import in this notebook, we use a relative path from the 'grandparent' directory (i.e., two levels up in the directory hierarchy) of this notebook. If you have relocated this notebook, you will need to adjust the relative path accordingly."
+    "Next, we will import the GravyFlow module."
    ]
   },
   {
@@ -71,30 +90,8 @@
    "execution_count": 2,
    "id": "feccc33f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "partially initialized module 'gravyflow' has no attribute 'gf' (most likely due to a circular import)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m     sys\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mappend(parent_dir)\n\u001b[1;32m      9\u001b[0m \u001b[39m# Import the GravyFlow module and rename it as 'gf' for ease of use in the code.\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgravyflow\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mgf\u001b[39;00m\n",
-      "File \u001b[0;32m~/gravyflow/__init__.py:48\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mnoise\u001b[39;00m \u001b[39mimport\u001b[39;00m NoiseType, NoiseObtainer\n\u001b[1;32m     44\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39minjection\u001b[39;00m \u001b[39mimport\u001b[39;00m (ScalingOrdinality, ScalingTypes, ScalingMethod, ScalingMethod, ReturnVariables, \n\u001b[1;32m     45\u001b[0m                         WaveformGenerator, WaveformParameters, WNBGenerator, cuPhenomDGenerator, \n\u001b[1;32m     46\u001b[0m                         IncoherentGenerator, InjectionGenerator, roll_vector_zero_padding, generate_mask, \n\u001b[1;32m     47\u001b[0m                         is_not_inherited, batch_injection_parameters)\n\u001b[0;32m---> 48\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mdataset\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m     49\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mplotting\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m     50\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mvalidate\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n",
-      "File \u001b[0;32m~/gravyflow/dataset.py:117\u001b[0m\n\u001b[1;32m     90\u001b[0m         max_arival_time_difference_seconds \u001b[39m=\u001b[39m tf\u001b[39m.\u001b[39mreduce_max(\n\u001b[1;32m     91\u001b[0m             max_arrival_time_differences\n\u001b[1;32m     92\u001b[0m         )\n\u001b[1;32m     94\u001b[0m     \u001b[39mreturn\u001b[39;00m max_arival_time_difference_seconds\n\u001b[1;32m     96\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdata\u001b[39m(    \n\u001b[1;32m     97\u001b[0m         \u001b[39m# Random Seed:\u001b[39;00m\n\u001b[1;32m     98\u001b[0m         seed: \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m     99\u001b[0m         \u001b[39m# Temporal components:\u001b[39;00m\n\u001b[1;32m    100\u001b[0m         sample_rate_hertz: \u001b[39mfloat\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,   \n\u001b[1;32m    101\u001b[0m         onsource_duration_seconds: \u001b[39mfloat\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    102\u001b[0m         offsource_duration_seconds: \u001b[39mfloat\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    103\u001b[0m         crop_duration_seconds: \u001b[39mfloat\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    104\u001b[0m         \u001b[39m# Scale factor:\u001b[39;00m\n\u001b[1;32m    105\u001b[0m         scale_factor : \u001b[39mfloat\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    106\u001b[0m         \u001b[39m# Noise: \u001b[39;00m\n\u001b[1;32m    107\u001b[0m         noise_obtainer : gf\u001b[39m.\u001b[39mNoiseObtainer \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    108\u001b[0m         group : \u001b[39mstr\u001b[39m \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mtrain\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    109\u001b[0m         \u001b[39m# Injections:\u001b[39;00m\n\u001b[1;32m    110\u001b[0m         waveform_generators: List[\n\u001b[1;32m    111\u001b[0m             Union[gf\u001b[39m.\u001b[39mcuPhenomDGenerator, gf\u001b[39m.\u001b[39mWNBGenerator]\n\u001b[1;32m    112\u001b[0m         ] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m, \n\u001b[1;32m    113\u001b[0m         num_examples_per_generation_batch : \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    114\u001b[0m         \u001b[39m# Output configuration:\u001b[39;00m\n\u001b[1;32m    115\u001b[0m         num_examples_per_batch: \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    116\u001b[0m         input_variables : List[\n\u001b[0;32m--> 117\u001b[0m             Union[gf\u001b[39m.\u001b[39;49mgf\u001b[39m.\u001b[39mWaveformParameters, gf\u001b[39m.\u001b[39mReturnVariables]\n\u001b[1;32m    118\u001b[0m         ] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    119\u001b[0m         output_variables : List[\n\u001b[1;32m    120\u001b[0m             Union[gf\u001b[39m.\u001b[39mgf\u001b[39m.\u001b[39mWaveformParameters, gf\u001b[39m.\u001b[39mReturnVariables]\n\u001b[1;32m    121\u001b[0m         ] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    122\u001b[0m         mask_history \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    123\u001b[0m     ):\n\u001b[1;32m    125\u001b[0m     \u001b[39mif\u001b[39;00m seed \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    126\u001b[0m         seed \u001b[39m=\u001b[39m gf\u001b[39m.\u001b[39mDefaults\u001b[39m.\u001b[39mseed\n",
-      "\u001b[0;31mAttributeError\u001b[0m: partially initialized module 'gravyflow' has no attribute 'gf' (most likely due to a circular import)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Get the absolute path of the grandparent directory (two levels up from the current directory)\n",
-    "parent_dir = os.path.abspath('../../')\n",
-    "\n",
-    "# Add the grandparent directory to sys.path if it's not already there.\n",
-    "# This is necessary to import GravyFlow if it's located in the grandparent directory.\n",
-    "if parent_dir not in sys.path:\n",
-    "    sys.path.append(parent_dir)\n",
-    "\n",
     "# Import the GravyFlow module and rename it as 'gf' for ease of use in the code.\n",
     "import gravyflow as gf"
    ]
@@ -143,25 +140,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "db7298c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:TensorFlow version: 2.15.0, CUDA version: 12.2\n",
+      "2024-02-28 05:31:16.134258: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:47] Overriding orig_value setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
+      "2024-02-28 05:31:16.134630: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 2000 MB memory:  -> device: 0, name: Tesla V100-SXM2-16GB, pci bus id: 0000:0b:00.0, compute capability: 7.0\n",
+      "INFO:root:[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA_VISIBLE_DEVICES after environment setup: 3\n",
+      "GPUs visible to TensorFlow after environment setup: [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+     ]
+    }
+   ],
    "source": [
     "# Set up the environment using gf.env() and return a tf.distribute.Strategy object.\n",
-    "env = gf.env()\n",
+    "env : tf.distribute.Strategy = gf.env()\n",
     "\n",
     "with env:\n",
     "    # All code within this block will be executed under the TensorFlow strategy scope.\n",
     "\n",
     "    # Printing the CUDA_VISIBLE_DEVICES environment variable after gf.env() setup.\n",
     "    # This shows which GPUs are allocated for TensorFlow operations.\n",
-    "    cuda_visible_devices = os.environ.get('CUDA_VISIBLE_DEVICES', 'Not set.')\n",
+    "    cuda_visible_devices : str = os.environ.get('CUDA_VISIBLE_DEVICES', 'Not set.')\n",
     "    print(f'CUDA_VISIBLE_DEVICES after environment setup: {cuda_visible_devices}')\n",
     "\n",
     "    # Printing the list of GPUs visible to TensorFlow after gf.env() has been executed.\n",
     "    # This confirms the successful allocation and visibility of GPUs to TensorFlow.\n",
-    "    gpus = tf.config.list_physical_devices('GPU')\n",
+    "    gpus : List = tf.config.list_physical_devices('GPU')\n",
     "    print(f\"GPUs visible to TensorFlow after environment setup: {gpus}\")"
    ]
   },
@@ -178,25 +194,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ccbe5cb1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:TensorFlow version: 2.15.0, CUDA version: 12.2\n",
+      "INFO:root:[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA_VISIBLE_DEVICES after environment setup: 4,5. This has changed correctly.\n",
+      "GPUs visible to TensorFlow after environment setup: [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]. This has not changed.\n"
+     ]
+    }
+   ],
    "source": [
     "# Attempt to run gf.env again, this time requesting 2 GPUs, without restarting the kernel.\n",
-    "env = gf.env(num_gpus_to_request=2)\n",
+    "env : tf.distribute.Strategy = gf.env(num_gpus_to_request=2)\n",
     "\n",
     "# gf.env will prevent the creation of a new scope, as TensorFlow does not allow this,\n",
     "# and will return the same environment that was set up initially.\n",
     "with env:\n",
     "    # Fetching and printing the CUDA_VISIBLE_DEVICES environment variable.\n",
     "    # This check is to see if the environment variable has changed.\n",
-    "    cuda_visible_devices = os.environ.get('CUDA_VISIBLE_DEVICES', 'Not set.')\n",
+    "    cuda_visible_devices : str = os.environ.get('CUDA_VISIBLE_DEVICES', 'Not set.')\n",
     "    print(f'CUDA_VISIBLE_DEVICES after environment setup: {cuda_visible_devices}. This has changed correctly.')\n",
     "\n",
     "    # Fetching and printing the list of GPUs visible to TensorFlow.\n",
     "    # This is to verify if the visible GPUs to TensorFlow have changed.\n",
-    "    gpus = tf.config.list_physical_devices('GPU')\n",
+    "    gpus : List = tf.config.list_physical_devices('GPU')\n",
     "    print(f\"GPUs visible to TensorFlow after environment setup: {gpus}. This has not changed.\")"
    ]
   },
@@ -211,7 +244,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.13 ('gravyflow-212')",
+   "display_name": "Python 3.10.13 ('gravyflow')",
    "language": "python",
    "name": "python3"
   },
@@ -229,7 +262,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "c749986c5f458fb2b067b85dd36de77f848d054cfc4dbd65eb5821cf27edab2a"
+    "hash": "0be68b4d857a3b55dcb84670c9ea8054a433650dc9da871ef592f2f480116ffb"
    }
   }
  },
