Updated installation Guide

--- a/gravyflow/examples/01_environment_setup.ipynb
+++ b/gravyflow/examples/01_environment_setup.ipynb
@@ -7,12 +7,31 @@
    "source": [
     "# Notebook 1: Setting up the Environment\n",
     "\n",
-    "GravyFlow is a GPU-based module that relies heavily on vectorized GPU functions to accelerate calculations. Many components, primarily cuPhenom, do not have a CPU alternative.\n",
+    "## Instalation\n",
     "\n",
+    "\n",
+    "### 1. Clone the repository\n",
     "GravyFlow can be installed by cloning the git repository with: \n",
     "\n",
-    "`git clone https://github.com/mrknorman/gravyflow`\n",
+    "`git clone https://github.com/mrknorman/gravyflow --recurse-submodules`\n",
     "\n",
+    "The `--recurse-submodules` tag ensures that the cuPhenom submodule is also downloaded along with its submodules.\n",
+    "\n",
+    "### 2. Compile cuPhenom\n",
+    "Next, the cuPhenom library must be compiled, navigate to the cuPhenom submodule using:\n",
+    "\n",
+    "`cd gravyflow/cuphenom`\n",
+    "\n",
+    "Then ensure that `nvcc` the CUDA C++ compiler is usable by adding the appropriate value to your PATH variable with:\n",
+    "\n",
+    "`export PATH=/usr/local/cuda/bin${PATH:+:${PATH}}$`\n",
+    "\n",
+    "This may need to be altered if your CUDA install is located at a non default location. Remeber to move back outside of\n",
+    "the cuPhenom directory to continue the install process with:\n",
+    "\n",
+    "`cd -`\n",
+    "\n",
+    "### 3. Install Gravyflow\n",
     "It is recommended that you install GravyFlow within a fresh conda environment. Note that GravyFlow requires Python=3.10*:\n",
     "\n",
     "`conda env create --name gravyflow`\n",
@@ -27,6 +46,40 @@
     "\n",
     "Be aware that Gravflow is under active development; as such, you might encounter issues. If you encounter problems with the installation , ensure that TensorFlow can detect available GPUs in your environment.\n",
     "\n",
+    "GravyFlow is a GPU-based module that relies heavily on vectorized GPU functions to accelerate calculations. Many components, primarily cuPhenom, do not have a CPU alternative.\n",
+    "\n",
+    "### 4. Setup permissions:\n",
+    "\n",
+    "Follow this guide: \n",
+    "\n",
+    "https://computing.docs.ligo.org/guide/auth/x509/\n",
+    "\n",
+    "Then this guide:\n",
+    "\n",
+    "https://computing.docs.ligo.org/guide/auth/kerberos/\n",
+    "\n",
+    "### 5. Setup Gravity Spy permission:\n",
+    "\n",
+    "Go to https://secrets.ligo.org/secrets/144/ and log in with your LIGO credentials\n",
+    "to get the username and password for Gravity Spy and enter them as follows:\n",
+    "\n",
+    "export GRAVITYSPY_DATABASE_USER=<user>\n",
+    "export GRAVITYSPY_DATABASE_PASSWD=<password>\n",
+    "\n",
+    "### 6. Test Gravyflow (optional)\n",
+    "\n",
+    "Gravyflow uses PyTest to enable testing of its functionality, to test GravyFlow run:\n",
+    "\n",
+    "`pytest gravyflow`\n",
+    "\n",
+    "Note that if you are testing whilst the GPUs are busy, some tests may fail if there is no avalible GPU memory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4127ab3b",
+   "metadata": {},
+   "source": [
     "## Sharing is caring\n",
     "\n",
     "Assuming you will be using GravyFlow on a shared GPU compute cluster, it is important to select the appropriate GPU(s) before executing any programs. This introductory notebook will guide you in configuring GravyFlow to automatically select a GPU with available memory. It will also ensure your environment is properly set up for running GravyFlow."
